--- a/ЧАТ.md
+++ b/ЧАТ.md
@@ -33,3 +33,6 @@ PS C:\Users\User\Desktop\wwww\crypto-chat> python scripts/telegram_parser.py --l
 Сохранено 10 постов
 Загрузка завершена успешно
 PS C:\Users\User\Desktop\wwww\crypto-chat> 
+
+если траблы с env то явно указываем загрузку переменных через dotenv 
+require('dotenv').config({ path: require('path').resolve(__dirname, '.env') });
